@@ -14,6 +14,7 @@ S3method(as.character, tclVar)
 S3method(as.double, tclObj)
 S3method(as.integer, tclObj)
 S3method(as.logical, tclObj)
+S3method(as.raw, tclObj)
 S3method(print, tclObj)
 S3method("[[", tclArray)
 S3method("[[<-", tclArray)
