@@ -263,9 +263,14 @@ SEXP RTcl_StringFromObj(SEXP args)
     SEXP so;
     char *s;
     Tcl_DString s_ds;
+    Tcl_Obj *obj;
 
+    obj = (Tcl_Obj *)R_ExternalPtrAddr(CADR(args));
+    if (!obj)
+        error(_("invalid tclObj -- perhaps saved from another session?"));
     Tcl_DStringInit(&s_ds);
-    str = Tcl_GetStringFromObj((Tcl_Obj *)R_ExternalPtrAddr(CADR(args)), NULL);
+    str = Tcl_GetStringFromObj(obj, NULL);
+    /* FIXME: could use UTF-8 here */
     s = Tcl_UtfToExternalDString(NULL, str, -1, &s_ds);
     so = mkString(s);
     Tcl_DStringFree(&s_ds);
@@ -275,11 +280,14 @@ SEXP RTcl_StringFromObj(SEXP args)
 SEXP RTcl_ObjAsCharVector(SEXP args)
 {
     int count;
-    Tcl_Obj **elem;
+    Tcl_Obj **elem, *obj;
     int ret, i;
     SEXP ans;
 
-    ret = Tcl_ListObjGetElements(RTcl_interp, (Tcl_Obj *)R_ExternalPtrAddr(CADR(args)), &count, &elem);
+    obj = (Tcl_Obj *)R_ExternalPtrAddr(CADR(args));
+    if (!obj)
+        error(_("invalid tclObj -- perhaps saved from another session?"));
+    ret = Tcl_ListObjGetElements(RTcl_interp, obj, &count, &elem);
     if (ret != TCL_OK)
         return RTcl_StringFromObj(args);
 
@@ -370,6 +378,8 @@ SEXP RTcl_ObjAsDoubleVector(SEXP args)
     SEXP ans;
 
     obj = (Tcl_Obj *)R_ExternalPtrAddr(CADR(args));
+    if (!obj)
+        error(_("invalid tclObj -- perhaps saved from another session?"));
 
     /* First try for single value */
     ret = Tcl_GetDoubleFromObj(RTcl_interp, obj, &x);
@@ -436,6 +446,8 @@ SEXP RTcl_ObjAsIntVector(SEXP args)
     SEXP ans;
 
     obj = (Tcl_Obj *)R_ExternalPtrAddr(CADR(args));
+    if (!obj)
+        error(_("invalid tclObj -- perhaps saved from another session?"));
 
     /* First try for single value */
     ret = Tcl_GetIntFromObj(RTcl_interp, obj, &x);
@@ -481,6 +493,42 @@ SEXP RTcl_ObjFromIntVector(SEXP args)
         }
 
     return makeRTclObject(tclobj);
+}
+
+SEXP RTcl_ObjAsRawVector(SEXP args)
+{
+    int nb, count, i, j;
+    Tcl_Obj **elem, *obj;
+    unsigned char *ret;
+    SEXP ans, el;
+
+    obj = (Tcl_Obj *)R_ExternalPtrAddr(CADR(args));
+    if (!obj)
+        error(_("invalid tclObj -- perhaps saved from another session?"));
+    ret = Tcl_GetByteArrayFromObj(obj, &nb);
+    if (ret)
+    {
+        ans = allocVector(RAWSXP, nb);
+        for (j = 0; j < nb; j++)
+            RAW(ans)[j] = ret[j];
+        return ans;
+    }
+
+    /* Then try as list */
+    if (Tcl_ListObjGetElements(RTcl_interp, obj, &count, &elem) != TCL_OK)
+        return R_NilValue;
+
+    PROTECT(ans = allocVector(VECSXP, count));
+    for (i = 0; i < count; i++)
+    {
+        el = allocVector(RAWSXP, nb);
+        SET_VECTOR_ELT(ans, i, el);
+        ret = Tcl_GetByteArrayFromObj(elem[i], &nb);
+        for (j = 0; j < nb; j++)
+            RAW(el)[j] = ret[j];
+    }
+    UNPROTECT(1);
+    return ans;
 }
 
 SEXP RTcl_GetArrayElem(SEXP args)
